# CloudSurge

./: .gitignore  README.md  flake.nix  install.sh  justfile  meson.build  org.gnome.Example.json  org.techtowers.CloudSurge.json  pyproject.toml  python3-requirements.json
.github/workflows/: build-flatpak.yml
backend/: DEPRECATED_azure_provider.py  __init__.py  aws_provider.py  azure.py  azure_provider.py  db.py  digitalocean_provider.py  no_provider.py  reached_cost_limits.py  server_is_active.py  vm.py
data/: meson.build  org.gnome.Example.desktop.in  org.gnome.Example.metainfo.xml.in  org.techtowers.CloudSurge.desktop.in  org.techtowers.CloudSurge.gschema.xml  org.techtowers.CloudSurge.metainfo.xml.in  org.techtowers.CloudSurge.service.in
data/icons/: meson.build
frontend/CloudSurge/: README.md  org.gnome.Example.json  org.gnome.Example.json~
frontend/CloudSurge/data/: org.gnome.Example.gschema.xml  org.gnome.Example.metainfo.xml.in  org.gnome.Example.service.in
frontend/CloudSurge/po/: POTFILES.in  meson.build
frontend/CloudSurge/src/: cloudsurge.gresource.xml  cloudsurge.in  main.py  meson.build  new.py  provider_settings_window.py  vm_settings_dialog.py  vm_settings_window.py  window.py
frontend/CloudSurge/src/backend/: __init__.py  aws_provider.py  no_provider.py  vm.py
frontend/CloudSurge/src/blueprints/: new.blp  provider_settings_window.blp  vm_settings_dialog.blp  window.blp
po/: POTFILES.in
scripts/: README.md  cassette.tape  cloudsurge-daemon.sh  cloudsurge-job.sh  cloudsurge.sh  flake.nix  remote-install.sh
services/: cloudsurge-job.service  cloudsurge-job.timer  cloudsurge-server.service
src/: cloudsurge.gresource.xml  db.py  error_window.py  main.py  meson.build  new.py  provider_settings_window.py  vm.py  vm_settings_window.py  wait_popup_window.py  window.py  window.ui
src/backend/: __init__.py  aws_provider.py  db.py  digitalocean_provider.py  no_provider.py  reached_cost_limits.py  server_is_active.py  vm.py
src/blueprints/: error.blp  new.blp  vm_settings_window.blp  wait_popup.blp  window.blp
